<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".horario.Activity_registro_horario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_gravity="center"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_titulo_seleccion_dias"
                    style="@style/textRelog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center|top"
                    android:text="@string/seleccione_dias_de_trabajo"
                    android:textSize="24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center">


                    <CheckBox
                        android:id="@+id/cb_lunes"
                        style="@style/textDia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/blue_global"
                        android:text="@string/lunes" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center" >

                    <CheckBox
                        android:id="@+id/cb_martes"
                        style="@style/textDia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/blue_global"
                        android:text="@string/martes" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center" >

                    <CheckBox
                        android:id="@+id/cb_miercoles"
                        style="@style/textDia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/blue_global"
                        android:text="@string/miercoles" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center" >

                    <CheckBox
                        android:id="@+id/cb_jueves"
                        style="@style/textDia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/blue_global"
                        android:text="@string/jueves" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center" >

                    <CheckBox
                        android:id="@+id/cb_viernes"
                        style="@style/textDia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/blue_global"
                        android:text="@string/viernes" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center" >

                    <CheckBox
                        android:id="@+id/cb_sabado"
                        style="@style/textDia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/blue_global"
                        android:text="@string/sabado" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_registrar_dias"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/button_send_cvs"
                    android:text="@string/registrar"
                    android:textAllCaps="false"
                    android:textColor="@color/color_send_cvs" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>