<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".horario.Activity_seleccion_horas">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp"
            android:padding="50dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_titulo_seleccion_dias_horas"
                    style="@style/textRelog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="50dp"
                    android:gravity="center|top"
                    android:text="@string/dia_hora"
                    android:textSize="24dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textDia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/para_el_dia" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="130dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="45dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginBottom="20dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="4dp">

                        <TextView
                            android:id="@+id/dia_obtenido"
                            style="@style/textDia"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:layout_weight="1"
                            android:text="diaObtenido" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_hora_salida"
                    style="@style/textDia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/hora_entrada" />

                <Spinner
                    android:id="@+id/sp_horas_entrada"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="15dp" />


                <TextView
                    android:id="@+id/tv_hora_salida_titulo"
                    style="@style/textDia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/hora_salida" />

                <Spinner
                    android:id="@+id/sp_horas_salida"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="15dp" />

                <Button
                    android:id="@+id/btn_registrar_dia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_send_cvs"
                    android:text="@string/registrar"
                    android:textAllCaps="false"
                    android:textColor="@color/color_send_cvs"
                    android:textSize="18sp" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>

</LinearLayout>