<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/f_good_day"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_saludo"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginBottom="10dp"
                    android:padding="4dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="0dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="50dp"
                            android:orientation="vertical">

                        </LinearLayout>

                        <TextView
                            android:id="@+id/tv_saludo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/good_day" />

                        <Button
                            android:id="@+id/btn"
                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:drawableRight="@drawable/ic_wb_sunny_black_24dp"
                            android:gravity="left" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_checar"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="40dp"
                        android:background="@drawable/button_rounded"
                        android:drawableLeft="@drawable/verified"
                        android:focusable="true"
                        style="@style/textRelog"
                        android:textSize="24dp"
                        android:paddingRight="30dp"
                        android:paddingLeft="30dp"
                        android:text="@string/txt_checar_entrada"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/btn_dia_no_laboral"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/dia_no_laboral"
                        android:textAllCaps="false"
                        android:textColor="#FF9800" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">



                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="45dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginBottom="20dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="4dp">



                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/txt_div_horario"
                            style="@style/textRelog"
                            android:textSize="24dp"
                            android:gravity="center"

                            />

                    </androidx.cardview.widget.CardView>


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>